# ts-benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
examples/: run_config_benchmark.py  run_csv_example.py  run_custom_contract_model.py  run_historical_baselines.py
official_adapters/: README.md  pyproject.toml
official_adapters/examples/: official_multivariate_plugins.json
official_adapters/src/ts_benchmark_official_adapters/: __init__.py  compat.py  contract_support.py  deepvar_gpvar.py  manifests.py  plugin.py  timegrad.py  ts_benchmark_plugin.toml
plugin_examples/: README.md  demo_gaussian_config.json
plugin_examples/eqbench_demo_gaussian_plugin/: pyproject.toml
plugin_examples/eqbench_demo_gaussian_plugin/src/eqbench_demo_gaussian_plugin/: __init__.py  plugin.py  ts_benchmark_plugin.toml
src/ts_benchmark/: __init__.py  model_contract.py  paths.py
src/ts_benchmark/benchmark/: __init__.py  catalog.py  definition.py  io.py  protocol.py
src/ts_benchmark/cli/: main.py
src/ts_benchmark/dataset/: __init__.py  definition.py  factory.py  runtime.py  windows.py
src/ts_benchmark/dataset/providers/: __init__.py  synthetic.py  synthetic_config.py  tabular.py
src/ts_benchmark/metrics/: __init__.py  definition.py  distributional.py  scoring.py
src/ts_benchmark/model/: __init__.py  contracts.py  definition.py  factory.py  model_contract.py  pipeline_defaults.py  resolution.py
src/ts_benchmark/model/builtins/: __init__.py  debug_smoke_model.py  ewma_gaussian.py  filtered_historical_simulation.py  gaussian_covariance.py  historical_bootstrap.py  stochastic_vol_bootstrap.py  student_t_covariance.py
src/ts_benchmark/model/catalog/: __init__.py  plugin_metadata.py  plugins.py
src/ts_benchmark/model/wrappers/: __init__.py  duck_typed.py  external_process.py  preprocessed.py  worker.py
src/ts_benchmark/notebook/: __init__.py  api.py
src/ts_benchmark/preprocessing/: __init__.py  pipeline.py  transforms.py
src/ts_benchmark/resources/: __init__.py
src/ts_benchmark/resources/benchmarks/smoke_test/: benchmark.json  manifest.json
src/ts_benchmark/resources/benchmarks/smoke_test/baseline/: benchmark_config.json  manifest.json  metrics.csv  model_results.json  ranks.csv  run.json  scenarios.npz  summary.json
src/ts_benchmark/resources/benchmarks/smoke_test/baseline/diagnostics/: distribution_summary.csv  distribution_summary_by_asset.csv  functional_smoke_checks.csv  per_window_metrics.csv
src/ts_benchmark/resources/benchmarks/smoke_test_unconditional_path_dataset/: benchmark.json  manifest.json
src/ts_benchmark/resources/benchmarks/smoke_test_unconditional_windowed/: benchmark.json  manifest.json
src/ts_benchmark/resources/benchmarks/synthetic_basic_benchmark/: benchmark.json  manifest.json
src/ts_benchmark/resources/benchmarks/synthetic_basic_benchmark/baseline/: benchmark_config.json  manifest.json  metrics.csv  model_results.json  ranks.csv  run.json  summary.json
src/ts_benchmark/resources/sample_data/: demo_returns.csv  trademaster_dj30_adjcp_wide_2012_2021.csv
src/ts_benchmark/results/: __init__.py  distribution_summary.py  functional_smoke.py  per_window.py  report.py  types.py
src/ts_benchmark/run/: __init__.py  definition.py  evaluator.py  execution.py  model_runtime.py  orchestrator.py  results_assembly.py  storage.py
src/ts_benchmark/schemas/: __init__.py  benchmark_config.schema.json
src/ts_benchmark/serialization/: __init__.py  json.py
src/ts_benchmark/tracking/: __init__.py  mlflow.py
src/ts_benchmark/ui/: __init__.py  renderers.py  schema_forms.py  state.py
src/ts_benchmark/ui/pages/: __init__.py  config_studio.py  data_studio.py  diagnostics.py  environment.py  home.py  model_catalog.py  results.py  run_lab.py  tracking.py
src/ts_benchmark/ui/services/: __init__.py  configs.py  datasets.py  environment.py  model_catalog.py  runs.py  tracking.py
src/ts_benchmark/utils/: __init__.py  object_map.py  random.py  stats.py
tests/: test_benchmark_catalog.py  test_config_runner.py  test_dataset_catalog.py  test_examples.py  test_model_catalog_service.py  test_model_parameter_schema.py  test_notebook_api.py  test_object_map.py  test_plugin_metadata_resources.py  test_results_page.py  test_run_lab.py  test_schema_forms.py  test_smoke.py  test_structural_contract_adapters.py  test_tabular_loader.py  test_ui_services.py  test_units.py
(+5 files in other folders)
